# data-processing

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ods_update_references.py  renovate.json  ruff.toml  setup_new_etl.py
AUE-umweltlabor/: etl.py
GVA-Geodatenshop/: .gitignore  100063.csv  100064.csv  100065.csv  Metadata.csv  Opendatasoft_Export_GVA.csv  etl.py  etl.sh
Spitalzahlen/: calculation.py  example.py  get_data.py  hospitalzahlen.py  send_email.py  test.py  test_live.py
_management_api_test/: button.css  button.html  pages_test.py
amtsblatt/: etl.py
astra_strassenverkehrsunfaelle/: etl.py  pyproject.toml
aue_feinstaub_klybeck/: decentlab.py  etl.py  pyproject.toml
aue_fischereistatistik/: etl.py  gewaesser.py  pyproject.toml
aue_grundwasser/: Dockerfile  README.md  dataset_schema_temperatur.json  dataset_schema_wasserstand.json  etl.py  pyproject.toml  rename_data_files.py
aue_luft_klybeck/: etl.py  pyproject.toml
aue_rues/: Dockerfile  dataset_schema_rues.json  dataset_schema_truebung.json  etl.py  pyproject.toml
aue_schall/: .dockerignore  Dockerfile  clean_archive.py  dataset_schema.json  dummy-credentials.py  etl.py  etl.sh  pyproject.toml  requirements.txt
aue_umweltlabor/: .dockerignore  .gitignore  Dockerfile  dataset_schema_gew_rhein_rues_wasser.json  etl.py  etl.sh  pyproject.toml  requirements.txt
awa_bewilligungen/: etl.py  pyproject.toml
awa_bewilligungen/data_orig/: Untitled
awa_feiertage/: Dockerfile  FreiUndFeiertage.ics.template  create_ics.py  etl.py  pyproject.toml
bachapp/: shape_filter.py
bafu_hydrodaten/: .dockerignore  .gitignore  Dockerfile  README.md  _etl_ftp.py  _etl_live.py  change_order_columns.py  correct_data.py  dummy-credentials.py  etl.py  etl.sh  etl_gefahrenstufen.py  etl_https.py  etl_live.py  etl_vorhersagen.py  pyproject.toml
bafu_hydrodaten_vorhersagen/: Dockerfile  etl.py  etl.sh  pyproject.toml
bag_coronavirus/: Dockerfile  _etl_pcr_antigen.py  copy_bag_datasets.py  dummy_credentials.py  etl.sh  etl_bag_datasets.sh  etl_hosp_capacity.py  etl_impfbereitschaft.sh  etl_impftermine.py  etl_impftermine.sh  etl_restbevoelkerung.sh  etl_test.py  etl_test_pcr_antigen.py  etl_vmdl.py  etl_vmdl.sh  etl_vmdl_altersgruppen.py  etl_vmdl_impf_uebersicht.py  vmdl.py  vmdl_extract.py
bag_coronavirus_tests/: Dockerfile  _etl_pcr_antigen.py  dummy_credentials.py  etl.py  etl.sh  etl_hosp_capacity.py
bvb/: .gitignore  Dockerfile
bvb_fahrgastzahlen/: Dockerfile  Test_automated_email.py  etl.py  pyproject.toml
common/: .env.example  README.md  __init__.py  change_tracking.py  pyproject.toml  requirements.txt  retry.py
covid19_hosp/: Dockerfile  dummy_credentials.py  etl.py  etl.sh  hosp_extract.py  hosp_transform.py
covid19bs/: Dockerfile  dummy-credentials.py  etl.py  (+3 more)
dcc_anonymize_areas/: builders.py  etl.py  etl_delauney.py  etl_greedy.py  etl_strtree.py  example_hexagon_population.py  pyproject.toml
dcc_dataspot_schemes/: Dockerfile  dataspot_auth.py  etl.py  pyproject.toml
dcc_ki_faq/: Dockerfile  etl.py  pyproject.toml
dcc_verzeichnis_personendaten/: dataspot_auth.py  etl.py  pyproject.toml
digilab_eleistungen/: README.md  etl.py  pyproject.toml
ed_schulferien/: Dockerfile  SchulferienBS.ics.template  create_ics.py  dataset_schema.json  dummy_credentials.py  etl.py  main.py  pyproject.toml  requirements.txt
ed_swisslos_sportfonds/: Dockerfile  etl.py  pyproject.toml
esc_faq/: Dockerfile  etl.py  pyproject.toml
fgi_stac/: Dockerfile  README.md  catalog.py  dataspot_api.py  etl.py  extract_collections.py  extract_metadata.py  fgi_stac_airflow.py  geometa_stac_datasets.py  http_client.py  http_retry.py  metadata.py  migrate_publish_catalog.py  paths.py  prepare_assets.py  publish.py  publish_dataset.py  pyproject.toml  schema_merge.py  stac_sync.py  sync_catalog.py  transform_runner.py  util.py  yaml_io.py
fgi_stac/data/: catalog_editor.py
fgi_stac/transforms/: BOHA_Bohrkataster.py  _default.py
gd_abwassermonitoring/: Dockerfile  dataset_schema.json  etl.py  etl.sh  pyproject.toml
gva_metadata/: Dockerfile  create_update.py  etl.py  pyproject.toml
ibs_parkhaus_bewegungen/: Dockerfile  etl.py  pyproject.toml
itbs_klv/: Dockerfile  etl.py  pyproject.toml
iwb_gas/: Dockerfile  etl.py  etl.sh  pyproject.toml
jsd_swisslos/: etl.py  pyproject.toml
kapo_eventverkehr_stjakob/: Dockerfile  etl.py  pyproject.toml
kapo_geschwindigkeitsmonitoring/: .dockerignore  .gitignore  Dockerfile  dataset_schema_100097.json  etl.py  etl.sh  parquet_test.py  pyproject.toml  requirements.txt
kapo_geschwindigkeitsmonitoring/src/: dummy-credentials.py  etl.py  parquet_test.py
kapo_ordnungsbussen/: .dockerignore  Dockerfile  etl.py  etl.sh  group_by_station.py  pyproject.toml
kapo_ordnungsbussen/data/shp_bs/: bs.shx
kapo_ordnungsbussen/src/: etl.py  etl_rand_loc.py  group_by_station.py
kapo_smileys/: .dockerignore  .gitignore  Dockerfile  etl.py  plot_smileys.py  pyproject.toml
kapo_smileys/src/: etl.py  etl_datasette.py  plot_smileys.py
meteoblue_wolf/: .dockerignore  Dockerfile  dummy-credentials.py  etl.py  etl.sh  pyproject.toml  requirements.txt
mobilitaet_mikromobilitaet/: Dockerfile  Dockerfile.etl  Dockerfile.stats  dataset_schema.json  etl.py  etl_recover.py  pyproject.toml
mobilitaet_mikromobilitaet/docker_etl/: Dockerfile
mobilitaet_mikromobilitaet/docker_stats/: Dockerfile
mobilitaet_mikromobilitaet/src/: etl.py  etl_recover.py  etl_stats.py
mobilitaet_mikromobilitaet_stats/: Dockerfile  etl.py  pyproject.toml
mobilitaet_verkehrszaehldaten/: .env.example  .gitignore  Dockerfile  crontab.txt  dashboard_calc.py  dummy-credentials.py  etl.py  etl.sh  pyproject.toml
mobilitaet_verkehrszaehldaten/src/: dashboard_calc.py  etl.py
ods_update_temporal_coverage/: Dockerfile  etl.py  pyproject.toml
parkendd/: .dockerignore  .gitignore  Dockerfile  dummy-credentials.py  etl.py  etl.sh  import_history.py  pyproject.toml  requirements.txt
parkendd/data/csv/lots/: parkhaeuser_manually_curated.csv
(+615 files in other folders)
