[project]
name = "aue-rues"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "common",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "v0.1.0" }

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
