[project]
name = "awa-bewilligungen"
version = "0.1.0"
description = "ETL pipeline for AWA Arbeitsinspekorat Bewilligungen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "dfd6ec3541e8506a906b8a0e51f6cf8ac717077e" }
