[project]
name = "dcc-verzeichnis-personendaten"
version = "0.1.0"
description = "Export published Dataspot Processing records to Huwise"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b2d26f48a7cc43ce823b2763d87c41201e131b40" }
