[project]
name = "digilab-eleistungen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "openpyxl>=3.1.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.0.0",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b2d26f48a7cc43ce823b2763d87c41201e131b40" }
