[project]
name = "ed-schulferien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "common",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "vobject>=0.9.9",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b628bce8b2f85cfc593799a8e4b6c2eed24aa064" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
