[project]
name = "ed-schulferien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "common",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "openpyxl>=3.0.9",
    "vobject>=0.9.9",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b2d26f48a7cc43ce823b2763d87c41201e131b40" }


