[project]
name = "ed-swisslos-sportfonds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "1a7ec054c92e694f5727ea94f90e6c8f2472aea7" }

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
