[project]
name = "esc-faq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "markdown>=3.7",
    "markdown3-newtab>=0.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "717a526a1bbf295302d6a1749ce2a876f4eabfcb" }

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
