[project]
name = "esc-faq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "markdown>=3.7",
    "markdown3-newtab>=0.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b628bce8b2f85cfc593799a8e4b6c2eed24aa064" }

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
