[project]
name = "fgi-stac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "common",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "huwise-utils-py>=1.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common" }
