[project]
name = "gva-metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "common",
    "pandas>=2.3.2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "dfd6ec3541e8506a906b8a0e51f6cf8ac717077e" }
