[project]
name = "ibs-parkhaus-bewegungen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "common",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "xlrd>=2.0.1",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "dfd6ec3541e8506a906b8a0e51f6cf8ac717077e" }


