[project]
name = "jsd-swisslos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "common",
    "pandas>=2.2.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "717a526a1bbf295302d6a1749ce2a876f4eabfcb" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
