[project]
name = "kapo-eventverkehr-stjakob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "markdown>=3.8.2",
    "markdown3-newtab>=0.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "dfd6ec3541e8506a906b8a0e51f6cf8ac717077e" }