[project]
name = "kapo-geschwindigkeitsmonitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.1",
    "common",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b2d26f48a7cc43ce823b2763d87c41201e131b40" }
