[project]
name = "kapo-ordnungsbussen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "shapely>=2.1.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "1a7ec054c92e694f5727ea94f90e6c8f2472aea7" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas-vet
    "PD",
]
