[project]
name = "kapo-smileys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyshp>=2.3.1",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b628bce8b2f85cfc593799a8e4b6c2eed24aa064" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
