[project]
name = "meteoblue-wolf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "pycryptodome>=3.22.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "b628bce8b2f85cfc593799a8e4b6c2eed24aa064" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
