[project]
name = "mobilitaet-mikromobilitaet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "geopandas>=1.0.1",
    "owslib>=0.32.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[tool.uv.sources]
common = { git = "https://github.com/opendatabs/common", rev = "717a526a1bbf295302d6a1749ce2a876f4eabfcb" }

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
