[project]
name = "mobilitaet-mikromobilitaet-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filehash>=0.2.dev1",
    "geopandas>=1.0.1",
    "more-itertools>=10.6.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
